--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     <p>
       Está com fome? Peça e receba em casa.
     </p>
-    <a class="btn btn-primary btn-lg" href="main-restaurants.html">Ver restaurantes</a>
+    <a class="btn btn-primary btn-lg" [routerLink]="['/restaurants']">Ver restaurantes</a>
   </div>
 
 </section>
