--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,9 +5,6 @@
 <section class="content">
   <section class="invoice">
 
-    {{form.valid}}
-    {{form.value | json}}
-
         <form #form="ngForm" novalidate>
           <div class="row">
             <div class="col-xs-12">
@@ -37,7 +34,7 @@
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container>
-                <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
+                <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
               </mt-input-container>
 
             </div>
@@ -87,7 +84,9 @@
 
         <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success pull-right" [disabled]="!form.valid || cartItems().length === 0"><i class="fa fa-credit-card"></i> Concluir Pedido
+            <button (click)="checkOrder(form.value)" class="btn btn-success pull-right"
+            [disabled]="!form.valid || cartItems().length === 0">
+              <i class="fa fa-credit-card"></i> Concluir Pedido
             </button>
           </div>
         </div>
